[gd_scene load_steps=19 format=2]

[ext_resource path="res://shop/shop_pop_up.png" type="Texture" id=1]
[ext_resource path="res://Levels/level_task_theme.tres" type="Theme" id=2]
[ext_resource path="res://shop/Paper Background/shop_item_pink_paper.tscn" type="PackedScene" id=3]
[ext_resource path="res://shop/Paper Background/shop_item_white_paper.tscn" type="PackedScene" id=4]
[ext_resource path="res://shop/Paper Background/shop_item_grey_paper.tscn" type="PackedScene" id=5]
[ext_resource path="res://shop/Paper Background/shop_item_blue_paper.tscn" type="PackedScene" id=6]
[ext_resource path="res://close_button1.png" type="Texture" id=7]
[ext_resource path="res://close_button2.png" type="Texture" id=8]
[ext_resource path="res://close_button3.png" type="Texture" id=9]
[ext_resource path="res://shop/shop.gd" type="Script" id=10]
[ext_resource path="res://shop/Mouse Cursor/shop_item_green_cursor.tscn" type="PackedScene" id=11]
[ext_resource path="res://shop/Mouse Cursor/shop_item_blue_cursor.tscn" type="PackedScene" id=12]
[ext_resource path="res://shop/Mouse Cursor/shop_item_red_cursor.tscn" type="PackedScene" id=13]
[ext_resource path="res://shop/Mouse Cursor/shop_item_orange_cursor.tscn" type="PackedScene" id=14]
[ext_resource path="res://shop/left_page_shop1.png" type="Texture" id=15]
[ext_resource path="res://shop/left_page_shop2.png" type="Texture" id=16]
[ext_resource path="res://shop/left_page_shop3.png" type="Texture" id=17]
[ext_resource path="res://shop/left_page_shop4.png" type="Texture" id=18]

[node name="shop" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 10 )
__meta__ = {
"_edit_horizontal_guides_": [ 64.0, 584.0, 302.0 ],
"_edit_vertical_guides_": [ 64.0, 960.0, 512.0 ]
}

[node name="TextureRect" type="TextureRect" parent="."]
anchor_left = 0.063
anchor_top = 0.099
anchor_right = 0.937
anchor_bottom = 0.9
margin_left = -64.512
margin_top = -64.152
margin_right = 64.512
margin_bottom = 64.8
texture = ExtResource( 1 )

[node name="Label" type="Label" parent="."]
margin_left = 64.0
margin_top = 65.0
margin_right = 960.0
margin_bottom = 116.0
theme = ExtResource( 2 )
text = "Shop"
align = 1

[node name="VBoxContainer" type="VBoxContainer" parent="."]
margin_left = 68.0
margin_top = 177.0
margin_right = 504.0
margin_bottom = 337.0
custom_constants/separation = 32

[node name="shop_item" parent="VBoxContainer" instance=ExtResource( 4 )]
margin_right = 436.0
margin_bottom = 94.0

[node name="shop_item2" parent="VBoxContainer" instance=ExtResource( 6 )]
margin_top = 126.0
margin_right = 436.0
margin_bottom = 220.0
item_description = "A calm and soothing paper"

[node name="VBoxContainer2" type="VBoxContainer" parent="."]
margin_left = 516.0
margin_top = 177.0
margin_right = 956.0
margin_bottom = 337.0
custom_constants/separation = 32

[node name="shop_item2" parent="VBoxContainer2" instance=ExtResource( 3 )]
margin_right = 440.0
margin_bottom = 94.0

[node name="shop_item3" parent="VBoxContainer2" instance=ExtResource( 5 )]
margin_top = 126.0
margin_right = 440.0
margin_bottom = 220.0

[node name="VBoxContainer3" type="VBoxContainer" parent="."]
visible = false
margin_left = 68.0
margin_top = 177.0
margin_right = 504.0
margin_bottom = 337.0
custom_constants/separation = 32

[node name="shop_item3" parent="VBoxContainer3" instance=ExtResource( 11 )]
margin_left = 0.0
margin_right = 436.0

[node name="shop_item4" parent="VBoxContainer3" instance=ExtResource( 12 )]
margin_left = 0.0
margin_top = 126.0
margin_right = 436.0
margin_bottom = 220.0

[node name="VBoxContainer4" type="VBoxContainer" parent="."]
visible = false
margin_left = 516.0
margin_top = 177.0
margin_right = 956.0
margin_bottom = 337.0
custom_constants/separation = 32

[node name="shop_item" parent="VBoxContainer4" instance=ExtResource( 14 )]
margin_left = 0.0
margin_right = 440.0

[node name="shop_item4" parent="VBoxContainer4" instance=ExtResource( 13 )]
margin_left = 0.0
margin_top = 126.0
margin_right = 440.0
margin_bottom = 220.0

[node name="back" type="TextureButton" parent="."]
margin_left = 72.0
margin_top = 71.0
margin_right = 136.0
margin_bottom = 135.0
rect_scale = Vector2( 0.75, 0.75 )
texture_normal = ExtResource( 7 )
texture_pressed = ExtResource( 8 )
texture_hover = ExtResource( 9 )

[node name="left_page" type="TextureButton" parent="."]
margin_left = 69.0
margin_top = 533.0
margin_right = 117.0
margin_bottom = 581.0
texture_normal = ExtResource( 15 )
texture_pressed = ExtResource( 16 )
texture_hover = ExtResource( 17 )
texture_disabled = ExtResource( 18 )
flip_h = true

[node name="right_page" type="TextureButton" parent="."]
margin_left = 906.0
margin_top = 533.0
margin_right = 954.0
margin_bottom = 581.0
texture_normal = ExtResource( 15 )
texture_pressed = ExtResource( 16 )
texture_hover = ExtResource( 17 )
texture_disabled = ExtResource( 18 )

[connection signal="pressed" from="back" to="." method="_on_back_pressed"]
[connection signal="pressed" from="left_page" to="." method="_on_left_page_pressed"]
[connection signal="pressed" from="right_page" to="." method="_on_right_page_pressed"]
